fix right margin gap on icons

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -51,6 +51,12 @@ body {
   fill: currentColor;
 }
 
+p {
+  .icon {
+    margin-right: .3em;
+  }
+}
+
 .topbar {
 	display: block;
 	width:100vw;
@@ -84,25 +90,6 @@ body {
   }
 }
 
-.card-body.contains-code .highlight pre {
-  margin-bottom: 0;
-}
-
-.portfolio_list {
-    padding: 0 10px;
-    margin: 0 20px;
-    float: left;
-}
-.portfolio_container {
-    width: 600px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.box {
-    font-family: 'Comfortaa', sans-serif;
-    text-shadow:0px 0px 15px rgba(0,0,0,.5);
-}
 .footer { font-family: 'Work Sans', sans-serif; position: fixed; bottom: 10px }
 
 @keyframes spin {
